# ssh-connector

./: .gitignore  CLAUDE.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml
build_scripts/: build_linux.sh  build_mac.sh  build_windows.bat
config/: default_config.json
src/: __init__.py  config.py  connection_monitor.py  main.py  ssh_client.py  tunnel_manager.py
src/ui/: connection_status.py  main_window.py  port_forward_widget.py  settings_dialog.py
ssh-connector-cpp/: .gitignore  CMakeLists.txt  README.md  vcpkg.json
ssh-connector-cpp/.github/workflows/: build.yml
ssh-connector-cpp/cmake/: toolchain-linux-clang.cmake  toolchain-windows-mingw.cmake
ssh-connector-cpp/packaging/linux/: ssh-connector.desktop
ssh-connector-cpp/packaging/macos/: Info.plist
ssh-connector-cpp/packaging/windows/: installer.nsi
ssh-connector-cpp/resources/icons/: app.icns
ssh-connector-cpp/scripts/: build_linux.sh  build_macos.sh  build_windows.bat  cross_build.sh  setup_cross_compile.sh
ssh-connector-cpp/src/: main.cpp  main_fltk.cpp  main_qt.cpp
ssh-connector-cpp/src/config/: Config.cpp  Config.h  ConfigManager.cpp  ConfigManager.h
ssh-connector-cpp/src/core/: ConnectionState.h  SSHClient.cpp  SSHClient.h  TunnelHandler.cpp  TunnelHandler.h
ssh-connector-cpp/src/ui/: MainWindow.cpp  MainWindow.h
ssh-connector-cpp/src/ui/fltk/: MainWindow.cpp  MainWindow.h
ssh-connector-cpp/src/ui/qt/: MainWindow.cpp  MainWindow.h
